# code-jam-the-rubber-duck-debuggers

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
client/: package-lock.json  test_server.py
client/src/routes/: +page.svelte
client/src/ui/: Custom_Input.svelte  Filled_button.svelte
client/templates/: game.html  home.html  lobby.html
docs/: presentation.md
pic_crypt/: __main__.py  cli.py  defines.py  encoders.py  gui.py
pic_crypt/image/: text.py
pic_crypt/views/: create_room.qml  join_room.qml  main.qml
project/: __main__.py  choosing_cipher.py  cipher_choosing.py  ciphers.py  cli.py  decoder.py  defines.py  encode.py  encoder.py  encoders.py  gui.py  image.py  lsb_steganography.py  text_in_image.py  text_thingies.py
project/cli/: __init__.py  decode.py  encode.py
project/data/: frozen_east_text_detection.pb
project/encoder/: encoder_impl.py  encoder_interface.py
project/encoders/: encoders.py
project/image/: __init__.py  image_impl.py  image_interface.py  text.py
project/image/encoders/: iface.py
project/server/: room.py  server.py
project/views/: create_room.qml  join_room.qml  main.qml
project/webserver/: extension.py  room.py  server.py
project/webserver/game_handler/: __init__.py
project/webserver/templates/: game.html  home.html  lobby.html
webserver/: server.py
webserver/templates/: home.html
