[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = [
    "nozwock",
    "realstealthninja",
    "SimonMeersschaut",
    "Sapient44",
    "Nhsdkk",
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.group.dev.dependencies]
# Base tools
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
black = "^23.7.0"
mypy = "^1.5.1"

# Flake8 plugins, see https://github.com/python-discord/code-jam-template/tree/main#plugin-list
flake8-docstrings = "~1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
