[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = [
    "nozwock",
    "realstealthninja",
    "SimonMeersschaut",
    "Sapient44",
    "Nhsdkk",
]
license = "MIT"

[tool.poetry.scripts]
project = 'project.cli:app'

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
typer = "^0.9.0"
opencv-python = "^4.8.0.76"
numpy = "^1.25.2"
bitarray = "^2.8.1"
flask = "^2.3.3"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
# Base tools
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
black = "^23.7.0"
mypy = "^1.5.1"

# Flake8 plugins, see https://github.com/python-discord/code-jam-template/tree/main#plugin-list
flake8-docstrings = "~1.7.0"
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
